codepkg/objects/Shipment_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Case_Count__c</fullName>
        <description>Used to store number of cases</description>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Product_Shipped__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Shipped</label>
        <referenceTo>Order_Product__c</referenceTo>
        <relationshipName>Shipment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Order_Product_Shipped__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Received_BOL_Total_Quantity__c</fullName>
        <label>Product Received/BOL Total Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Shipped__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Shipped(To Be Deleted)</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipName>Shipment_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <formula>Order_Product_Shipped__r.Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Line_Item__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment_Order__c</referenceTo>
        <relationshipLabel>Shipment Order Line Items</relationshipLabel>
        <relationshipName>Shipment_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Sent to Warehouse</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                    <isActive>false</isActive>
                    <label>Sent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Shipment Order Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SLI-{0000}</displayFormat>
        <label>Shipment Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>